compiler/driver/tests/snapshots/diagnostics_snapshots__diag_return_ref_to_local.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E035]: cannot return reference to local variable; value does not live long enough
  --> test.ny:1:1
   |
  1 | struct Bad { s: string }
   | ^
   |
  2 | fn main() {
   |
  3 |     let b = Bad { s: "x" }
   |
  4 |     spawn { print(b.s) }
